# RPGAtlas-Dev

./: .gitignore  .prettierignore  Atlas_Quest.json  Create Desktop Shortcut.cmd  README.md  eslint.config.mjs  index.html  log.txt  package-lock.json  package.json  play.html  playwright.config.mjs  temp patch notes.txt  tsconfig.json  vite.config.mjs  vitest.config.mjs
.claude/: launch.json
css/: editor.css  play.css
docs/: MZ_MV_MIGRATION_ROADMAP.md  PRODUCTION_ROADMAP.md  mig-0-spec.md  mig-1-spec.md  mig-2-spec.md  mig-3-spec.md  mig-4-spec.md  mig-5-spec.md  mig-6-spec.md  mz-mv-parity-matrix.md  phase-0-bug-audit.md  phase-1-spec.md  phase-2-spec.md  phase-3-spec.md  phase-4-spec.md  phase-5-spec.md  phase-6-spec.md  phase-7-spec.md  phase-8-spec.md
docs-site/: Advanced-Map-Editor.html  Audio.html  Battles-and-States.html  Characters-and-Custom-Assets.html  Coming-from-RPG-Maker.html  Events.html  Installation-and-Setup.html  Maps-and-Tiles.html  Message-Text-Codes.html  Migration-Guide.html  Plugin-and-Script-API.html  Plugins.html  Publishing-Your-Game.html  Resources-and-Glossary.html  The-Asset-Browser.html  The-Database.html  The-Editor-Interface.html  Troubleshooting-and-FAQ.html  Your-First-Game.html  index.html  style.css
js/: assets.js  build-manifest.mjs  data.js  editor.js  engine.js  gl.js  patch-notes.js  plugins.js  renderer.js  sfx.js  standalone-template.mjs
scripts/: build-atlas-quest-advanced.mjs  build-atlas-quest-hd.mjs  build-docs-site.mjs  build-migration-fixtures.mjs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+319 files in other folders)
